--- a/packages/mason_logger/pubspec.yaml
+++ b/packages/mason_logger/pubspec.yaml
@@ -1,10 +1,10 @@
 name: mason_logger
-description: A reusable Dart logger used by the [Mason CLI](https://github.com/felangel/mason).
+description: A reusable Dart logger used by the Mason CLI (package:mason_cli).
 version: 0.1.0-dev.4
 homepage: https://github.com/felangel/mason
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
   meta: ^1.7.0
