--- a/.github/workflows/mason_api.yaml
+++ b/.github/workflows/mason_api.yaml
@@ -28,7 +28,7 @@ jobs:
       - uses: dart-lang/setup-dart@v1
 
       - name: Install Dependencies
-        run: pub get
+        run: dart pub get
 
       - name: Format
         run: dart format --set-exit-if-changed lib
@@ -38,7 +38,7 @@ jobs:
 
       - name: Run Tests
         run: |
-          pub global activate test_coverage
+          dart pub global activate test_coverage
           export PATH=$PATH:$HOME/.pub-cache/bin
           test_coverage
 
