--- a/packages/mason_cli/test/fixtures/init/bricks/hello/brick.yaml
+++ b/packages/mason_cli/test/fixtures/init/bricks/hello/brick.yaml
@@ -6,6 +6,11 @@ description: An example hello brick.
 # followed by an optional build number (separated by a +).
 version: 0.1.0+1
 
+# The following defines the environment for the current brick.
+# It includes the version of mason that the brick requires.
+environment:
+  mason: ">=0.1.0-dev <0.1.0"
+
 # Variables specify dynamic values that your brick depends on.
 # Zero or more variables can be specified for a given brick.
 # Each variable has:
