--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   mason_api: ^0.1.0-dev.3
   meta: ^1.7.0
   path: ^1.8.0
+  pub_semver: ^2.1.0
   pub_updater: ^0.2.1
   recase: ^4.0.0
   universal_io: ^2.0.4
