--- a/packages/mason_cli/test/fixtures/new/bricks/hello_world/brick.yaml
+++ b/packages/mason_cli/test/fixtures/new/bricks/hello_world/brick.yaml
@@ -1,10 +1,23 @@
 name: hello_world
 description: A new brick created with the Mason CLI.
+
+# The following defines the version and build number for your brick.
+# A version number is three numbers separated by dots, like 1.2.34
+# followed by an optional build number (separated by a +).
 version: 0.1.0+1
 
+# The following defines the environment for the current brick.
+# It includes the version of mason that the brick requires.
 environment:
   mason: ">=0.1.0-dev <0.1.0"
 
+# Variables specify dynamic values that your brick depends on.
+# Zero or more variables can be specified for a given brick.
+# Each variable has:
+#  * a type (string, number, or boolean)
+#  * an optional short description
+#  * an optional default value
+#  * an optional prompt phrase used when asking for the variable.
 vars:
   name:
     type: string
