--- a/.github/workflows/mason.yaml
+++ b/.github/workflows/mason.yaml
@@ -16,7 +16,7 @@ on:
       - packages/mason/**
 
 jobs:
-  build:
+  setup:
     defaults:
       run:
         working-directory: packages/mason
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: dart-lang/setup-dart@v1
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: dart pub get
 
       - name: Format
@@ -35,6 +35,27 @@ jobs:
 
       - name: Analyze
         run: dart analyze --fatal-infos --fatal-warnings .
+
+  build:
+    needs: setup
+
+    defaults:
+      run:
+        working-directory: packages/mason
+
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-latest, windows-latest, ubuntu-latest]
+
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - uses: dart-lang/setup-dart@v1
+
+      - name: Install Dependencies
+        run: dart pub get
 
       - name: Run Tests
         run: dart test -j 1 -x pull-request-only --coverage=coverage && dart run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
