--- a/.github/workflows/mason.yaml
+++ b/.github/workflows/mason.yaml
@@ -58,7 +58,7 @@ jobs:
         run: dart pub get
 
       - name: Run Tests
-        run: dart test -j 1 -x pull-request-only --coverage=coverage --test-randomize-ordering-seed random && dart run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+        run: dart test -j 1 -x pull-request-only --coverage=coverage && dart run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
       - name: Check Code Coverage
         uses: VeryGoodOpenSource/very_good_coverage@v1
