--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -67,6 +67,7 @@
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
     "lint": "eslint src --ext ts",
+    "lint:fix": "eslint src --ext ts --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
