--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -2,7 +2,7 @@
   "name": "mason",
   "displayName": "mason",
   "description": "Mason support for Visual Studio Code.",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "publisher": "FelixAngelov",
   "repository": {
     "type": "git",
@@ -67,6 +67,7 @@
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
     "lint": "eslint src --ext ts",
+    "lint:fix": "eslint src --ext ts --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
