--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -23,7 +23,7 @@ dev_dependencies:
   build_verify: ^3.0.0
   build_version: ^2.0.0
   collection: ^1.15.0
-  coverage: ^1.0.2
+  coverage: ">=1.0.0 <1.3.0"
   mocktail: ^0.2.0
   test: ^1.17.0
   very_good_analysis: ^2.4.0
