--- a/packages/mason_cli/test/fixtures/make/mason.yaml
+++ b/packages/mason_cli/test/fixtures/make/mason.yaml
@@ -7,6 +7,8 @@ bricks:
     path: ../../../../../bricks/documentation
   favorite_color:
     path: ../../../../../bricks/favorite_color
+  flavors:
+    path: ../../../../../bricks/flavors
   hello_world:
     path: ../../../../../bricks/hello_world
   hooks:
