--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -85,18 +85,24 @@
     "format:check": "prettier --check ."
   },
   "devDependencies": {
-    "@types/vscode": "^1.66.0",
     "@types/glob": "^7.2.0",
+    "@types/lodash": "^4.14.182",
     "@types/mocha": "^9.1.0",
     "@types/node": "14.x",
+    "@types/vscode": "^1.66.0",
+    "@types/yaml": "^1.9.7",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.11.0",
     "glob": "^7.2.0",
     "prettier": "2.6.0",
-    "typescript": "^4.5.5",
     "ts-loader": "^9.2.8",
+    "typescript": "^4.5.5",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "yaml": "^2.1.1"
   }
 }
