--- a/packages/mason/pubspec.yaml
+++ b/packages/mason/pubspec.yaml
@@ -3,6 +3,9 @@ description: >
   A Dart template generator which helps teams generate files quickly and consistently.
 version: 0.1.0-dev.31
 homepage: https://github.com/felangel/mason
+repository: https://github.com/felangel/mason
+issue_tracker: https://github.com/felangel/mason/issues
+documentation: https://github.com/felangel/mason/tree/master/packages/mason_cli#readme
 
 environment:
   sdk: ">=2.16.0 <3.0.0"
