--- a/packages/mason_cli/pubspec.yaml
+++ b/packages/mason_cli/pubspec.yaml
@@ -1,8 +1,11 @@
 name: mason_cli
 description: >
   Mason CLI allows developers to create and consume reusable templates called bricks.
-version: 0.1.0-dev.32
+version: 0.1.0-dev.33
 homepage: https://github.com/felangel/mason
+repository: https://github.com/felangel/mason
+issue_tracker: https://github.com/felangel/mason/issues
+documentation: https://github.com/felangel/mason/tree/master/packages/mason_cli#readme
 
 environment:
   sdk: ">=2.16.0 <3.0.0"
