feat(mason): hooks local imports

--- a/.github/workflows/mason.yaml
+++ b/.github/workflows/mason.yaml
@@ -6,6 +6,7 @@ on:
       - master
     paths:
       - .github/workflows/mason.yaml
+      - packages/mason_logger/**
       - packages/mason/**
 
   pull_request:
@@ -13,6 +14,7 @@ on:
       - master
     paths:
       - .github/workflows/mason.yaml
+      - packages/mason_logger/**
       - packages/mason/**
 
 jobs:
@@ -39,7 +41,7 @@ jobs:
       - name: Run Tests
         run: |
           dart pub global activate coverage 1.2.0
-          dart test -j 1 -x pull-request-only --coverage=coverage && dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+          dart test -j 1 -x pull-request-only --coverage=coverage && dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
 
       - name: Check Code Coverage
         uses: VeryGoodOpenSource/very_good_coverage@v1
