--- a/.github/workflows/mason_cli.yaml
+++ b/.github/workflows/mason_cli.yaml
@@ -6,6 +6,9 @@ on:
       - master
     paths:
       - .github/workflows/mason_cli.yaml
+      - packages/mason_logger/**
+      - packages/mason_api/**
+      - packages/mason/**
       - packages/mason_cli/**
 
   pull_request:
@@ -13,6 +16,9 @@ on:
       - master
     paths:
       - .github/workflows/mason_cli.yaml
+      - packages/mason_logger/**
+      - packages/mason_api/**
+      - packages/mason/**
       - packages/mason_cli/**
 
 jobs:
@@ -63,7 +69,7 @@ jobs:
       - name: Run Tests
         run: |
           dart pub global activate coverage 1.2.0
-          dart test -j 1 -x pull-request-only --coverage=coverage && dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+          dart test -j 1 -x pull-request-only --coverage=coverage && dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
 
       - name: Check Code Coverage
         uses: VeryGoodOpenSource/very_good_coverage@v1
