--- a/packages/mason/pubspec.yaml
+++ b/packages/mason/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   meta: ^1.7.0
   mustache_template: ^2.0.0
   path: ^1.8.0
+  pool: ^1.5.1
   pub_semver: ^2.1.0
   recase: ^4.0.0
   yaml: ^3.1.0
