--- a/packages/mason_logger/pubspec.yaml
+++ b/packages/mason_logger/pubspec.yaml
@@ -1,7 +1,10 @@
 name: mason_logger
 description: A reusable Dart logger used by the Mason CLI (package:mason_cli).
-version: 0.1.3
+version: 0.1.4
 homepage: https://github.com/felangel/mason
+repository: https://github.com/felangel/mason
+issue_tracker: https://github.com/felangel/mason/issues
+documentation: https://github.com/felangel/mason/tree/master/packages/mason_logger#readme
 
 environment:
   sdk: ">=2.16.0 <3.0.0"
