--- a/.github/workflows/mason_logger.yaml
+++ b/.github/workflows/mason_logger.yaml
@@ -36,6 +36,18 @@ jobs:
       - name: Analyze
         run: dart analyze --fatal-infos --fatal-warnings .
 
+      - name: Verify CI Behavior
+        run: |
+          dart test/ci.dart >> ci.txt
+          actual="ci.txt"
+          expected="test/fixtures/ci.txt"
+          if cmp -s "$actual" "$expected"; then
+              echo "PASSED"
+          else
+              echo "FAILED"
+              exit 1
+          fi
+
       - name: Run Tests
         run: |
           dart pub global activate coverage 1.2.0
